--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dd/microservice-core",
     "description": "initialize packages required for logging , messaging with rabbitmq , redis caching",
     "type": "libraries",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "license": "MIT",
     "require": {
         "itspire/monolog-loki": "^2.1",
@@ -12,14 +12,16 @@
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "knuckleswtf/scribe": "^4.29"
     },
     "autoload": {
         "psr-4": {
             "DD\\MicroserviceCore\\": "src/"
         },
-        "files": ["src/Traits/ApiResponseTrait.php"]
-
+        "files": [
+            "src/Traits/ApiResponseTrait.php"
+        ]
     },
     "authors": [
         {
@@ -31,5 +33,10 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "@php artisan vendor:publish --tag=scribe-config"
+        ]
     }
 }
