--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
         "monolog/monolog": "^3.5",
         "open-telemetry/opentelemetry-logger-monolog": "^1.0",
         "predis/predis": "^2.2",
-        "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3",
+        "knuckleswtf/scribe": "^4.29"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5",
-        "knuckleswtf/scribe": "^4.29"
+        "phpunit/phpunit": "^10.5"
     },
     "autoload": {
         "psr-4": {
