--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dd/microservice-core",
     "description": "initialize packages required for logging , messaging with rabbitmq , redis caching",
     "type": "libraries",
-    "version": "0.1.7",
+    "version": "0.1.8",
     "license": "MIT",
     "require": {
         "itspire/monolog-loki": "^2.1",
@@ -34,10 +34,11 @@
             "pestphp/pest-plugin": true
         }
     },
-    "scripts": {
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=scribe-config",
-            "echo test"
-        ]
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Knuckles\\Scribe\\ScribeServiceProvider"
+            ]
+        }
     }
 }
