--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dd/microservice-core",
     "description": "initialize packages required for logging , messaging with rabbitmq , redis caching",
     "type": "libraries",
-    "version": "0.1.19",
+    "version": "0.1.20",
     "license": "MIT",
     "require": {
         "itspire/monolog-loki": "^2.1",
@@ -20,6 +20,7 @@
             "DD\\MicroserviceCore\\": "src/"
         },
         "files": [
+            "src/helpers.php",
             "src/Traits/ApiResponseTrait.php"
         ]
     },
