--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dd/microservice-core",
     "description": "initialize packages required for logging , messaging with rabbitmq , redis caching",
     "type": "libraries",
-    "version": "0.1.22",
+    "version": "0.1.23",
     "license": "MIT",
     "require": {
         "itspire/monolog-loki": "^2.1",
@@ -20,8 +20,7 @@
             "DD\\MicroserviceCore\\": "src/"
         },
         "files": [
-            "src/helpers.php",
-            "src/Traits/ApiResponseTrait.php"
+            "src/helpers.php"
         ]
     },
     "authors": [
