--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dd/microservice-core",
     "description": "initialize packages required for logging , messaging with rabbitmq , redis caching",
     "type": "libraries",
-    "version": "0.1.25",
+    "version": "0.1.26",
     "license": "MIT",
     "require": {
         "itspire/monolog-loki": "^2.1",
@@ -11,7 +11,8 @@
         "predis/predis": "^2.2",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3",
         "knuckleswtf/scribe": "^4.29",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "dompdf/dompdf": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
