--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dd/microservice-core",
     "description": "initialize packages required for logging , messaging with rabbitmq , redis caching",
     "type": "libraries",
-    "version": "0.1.26",
+    "version": "0.1.27",
     "license": "MIT",
     "require": {
         "itspire/monolog-loki": "^2.1",
@@ -12,7 +12,8 @@
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3",
         "knuckleswtf/scribe": "^4.29",
         "maatwebsite/excel": "^3.1",
-        "dompdf/dompdf": "^2.0"
+        "barryvdh/laravel-snappy": "^1.0",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
